イベントフロー画面向けAPIの分割対応
