# ita_root/ita_api_organization/openapi.yaml
@@ -5780,11 +5780,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/ERROR_TEMPLATE'
 
-  /api/{organization_id}/workspaces/{workspace_id}/ita/event_relay/event_flow/:
+  /api/{organization_id}/workspaces/{workspace_id}/ita/event_relay/event_flow/history/:
     post:
       tags:
         - Event Relay
-      description: 検索条件を指定し、イベントフロー画面に描画する情報を取得する
+      description: 検索条件を指定し、イベントフローで扱う履歴情報（イベント履歴、アクション履歴）を取得する
       operationId: postEventFlow
       x-openapi-router-controller: controllers.event_relay_controller
       parameters:
@@ -5835,8 +5835,57 @@ paths:
                     type: string
                     example: 000-00000
                   data:
+                    type: array
+                    example: []
+                  message:
+                    type: string
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ERROR_TEMPLATE'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ERROR_TEMPLATE'
+
+  /api/{organization_id}/workspaces/{workspace_id}/ita/event_relay/event_flow/definition/:
+    get:
+      tags:
+        - Event Relay
+      description: イベントフローで扱う定義情報（ラベル、アクション、ルール）を取得する
+      operationId: getEventFlowDefinition
+      x-openapi-router-controller: controllers.event_relay_controller
+      parameters:
+        - name: organization_id
+          in: path
+          description: OrganizationID
+          required: true
+          schema:
+            type: string
+        - name: workspace_id
+          in: path
+          description: WorkspaceID
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  result:
+                    type: string
+                    example: 000-00000
+                  data:
                     type: object
-                    example: {"action":[{}], "action_log":[{}],"event_history":[{}], "filter":[{}], "rule":[{}] }
+                    example: {"action":[{}], "filter":[{}], "rule":[{}] }
                   message:
                     type: string
         '401':
